--- a/.github/workflows/ingress.yml
+++ b/.github/workflows/ingress.yml
@@ -1,10 +1,9 @@
-name: "Update Writebook Source"
+name: Update Writebook Source
 
 on:
   schedule:
     - cron: "0 3 * * *"
   workflow_dispatch:
-
 
 jobs:
   update:
